替换Base64库，解决mvn compile库过期警告